# Rocket-blog-lessons-5

./: README.md
Prettycode_blog/: Cargo.toml
Prettycode_blog/migrations/2020-04-28-164155_create_posts/: up.sql
Prettycode_blog/src/: main.rs  schema.rs
Prettycode_blog/src/posts/: forms.rs  handlers.rs  mod.rs
Prettycode_blog/static/css/: homepage.css
Prettycode_blog/templates/: homepage.html.tera  new_post.html.tera
