[package]
name = "Prettycode_blog"
version = "0.1.0"
authors = ["Voodlaz <47495939+Voodlaz@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.4"
rocket_codegen = "0.4.4"

diesel = { version="1.0.0", features=["postgres"] }
dotenv = "0.9.0"

[global.databases]
postgres_logs = { url= "postgres://postgres:dragon555@localhost/prettycode_blog_db"}


[dependencies.rocket_contrib]
version = "0.4.4"
default-features = false
features = ["diesel_postgres_pool", "serve", "handlebars_templates", "tera_templates"]
